syntax = "proto3";

package proto;

import "google/api/annotations.proto";

// protoc -I=. *.proto --go_out=plugins=grpc:.

message HelloRequest {
    string greeting = 1;
}

message HelloResponse {
    string reply = 1;
}

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse){
        option (google.api.http) = {
            get: "/hello/say"
        };   
    };
}
