syntax = "proto3";

package proto;

import "google/api/annotations.proto";

// protoc -I=. *.proto --go_out=plugins=grpc:.

message MemberInfoRequest {
    string id = 1;
}

message MemberInfoResponse {
    string name = 1;
    int64 age = 2;
    string city = 3;
    repeated string likes = 4;
}

service MemberService {
    rpc GetMember(MemberInfoRequest) returns (MemberInfoResponse) {
        option (google.api.http) = {
            get: "/mmeber/{id}"
        };
    };
}
